# toy-object-detection

service/: README.md  main.py  pyproject.toml
