[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Diego Calderon <diegoac2@illinois.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
matplotlib = {version = ">=3.2.2"}
opencv-python = {version = ">=4.5.5.62"}
numpy = {version = ">=1.18.5"}
Pillow = {version = ">=7.1.2"}
PyYAML = {version = ">=5.3.1"}
requests = {version = ">=2.23.0"}
scipy = {version = ">=1.4.1"}
torch = {version = ">=1.7.0"}
torchvision = {version = ">=0.8.1"}
tensorboard = {version = ">=2.4.1"}
pandas = {version = ">=1.1.4"}
seaborn = {version = ">=0.11.0"}
thop = {version = "^0.0.31"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
